# Maal-E

./: README.md  yolo_malle.cfg
maale/: CMakeLists.txt  package.xml
maale/cfg/: yolo_malle.cfg
maale/launch/: amcl.launch  display.launch  move_base.launch  navigation.launch  robot_localize.launch  rusty_slam.launch  teleop_key.launch
maale/maps/: map.pgm  map.yaml
maale/msg/: iot.msg
maale/robot_param/: dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
maale/src/: blink.ino  iotbox.py  object_detection.py  pyfirebase.py  teleop_key.py
maale/urdf/: maale.urdf
malli/: CMakeLists.txt  package.xml
malli/launch/: motor_run.launch
malli/src/: motor.py  object_detection.py
